--- a/attic/descructured.html
+++ b/attic/descructured.html
@@ -46,7 +46,7 @@
         }
 
     </style>
-    <script type="module" src="./construct-style-sheets-polyfill.js"></script>
+    <script type="module" src="../public/construct-style-sheets-polyfill.js"></script>
 </head>
 <body style="padding: 24px;">
 <div id="theGrid" class="grid" style="position: relative">
