--- a/attic/position-sticky.html
+++ b/attic/position-sticky.html
@@ -118,31 +118,6 @@
             z-index: 100;
         }
 
-        .area .sheet {
-            width: 2500px;
-            height: 1250px;
-        }
-
-        .top-area .sheet {
-            height: 150px;
-        }
-
-        .bottom-area .sheet {
-            height: 250px;
-        }
-
-        .bottom-area .sheet {
-            height: 250px;
-        }
-
-        .left-area .sheet {
-            width: 200px;
-        }
-
-        .right-area .sheet {
-            width: 400px;
-        }
-
         #top-left-area .cell {
             background-color: #8f8;
         }
@@ -192,32 +167,23 @@
 </head>
 <body style="padding: 25px 25px;">
 <div id="view-port">
-    <div id="top-left-area" class="top-area left-area area">
-        <div class="sheet"></div>
+    <div id="top-left-area" class="top-area left-area area sheet">
     </div>
-    <div id="top-area" class="top-area area">
-        <div class="sheet"></div>
+    <div id="top-area" class="top-area area sheet">
     </div>
-    <div id="top-right-area" class="top-area right-area area">
-        <div class="sheet"></div>
+    <div id="top-right-area" class="top-area right-area area sheet">
     </div>
-    <div id="left-area" class="left-area area">
-        <div class="sheet"></div>
+    <div id="left-area" class="left-area area sheet">
     </div>
-    <div id="center-area" class="center-area area">
-        <div class="sheet"></div>
+    <div id="center-area" class="center-area area sheet">
     </div>
-    <div id="right-area" class="right-area area">
-        <div class="sheet"></div>
+    <div id="right-area" class="right-area area sheet">
     </div>
-    <div id="bottom-left-area" class="bottom-area left-area area">
-        <div class="sheet"></div>
+    <div id="bottom-left-area" class="bottom-area left-area area sheet">
     </div>
-    <div id="bottom-area" class="bottom-area area">
-        <div class="sheet"></div>
+    <div id="bottom-area" class="bottom-area area sheet">
     </div>
-    <div id="bottom-right-area" class="bottom-area right-area area">
-        <div class="sheet"></div>
+    <div id="bottom-right-area" class="bottom-area right-area area sheet">
     </div>
 </div>
 <script type="module">
