--- a/public/vanilla.html
+++ b/public/vanilla.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>AgGrid Comparison</title>
+    <title>Sleek Grid 😎</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style type="text/css">
         body {
@@ -14,23 +14,27 @@
             font-family: sans-serif;
             background-color: cornflowerblue;
         }
-
-        #ag-grid {
-            height: 100%;
-        }
-
-        .ag-theme-alpine .ag-cell, .ag-theme-alpine .ag-full-width-row .ag-cell-wrapper.ag-row-group {
-            line-height: 30px !important;
-        }
     </style>
-    <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
-    <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-alpine.css">
+    <script src="./construct-style-sheets-polyfill.js"></script>
 </head>
-<body style="padding: 24px;">
-<div id="ag-grid" class="ag-theme-alpine"></div>
+<body style="padding: 25px 25px;">
+<sleek-grid column-autosize="quick"
+            column-header="top"
+            row-header="left"
+            column-resize
+            row-resize
+            column-dnd
+            row-dnd
+            sticky-top="1,2,3"
+            sticky-bottom="4,5,6"
+            sticky-left="1"
+            sticky-right="2"
+>
+</sleek-grid>
 <script type="module" src="../lib/index.mjs"></script>
 <script type="module">
+
+    window.grid = document.querySelector("sleek-grid");
 
     fetch("./mock-data.json").then(async function (result) {
 
@@ -40,51 +44,47 @@
         // number -> index in array row
 
         const columns = [
-            {headerName: "Id", field: "id"},
-            {headerName: "First_name", field: "first_name"},
-            {headerName: "Last_name", field: "last_name"},
-            {headerName: "Email", field: "email"},
-            {headerName: "Gender", field: "gender"},
-            {headerName: "Ip_address", field: "ip_address"},
-            {headerName: "Buzzword", field: "buzzword"},
-            {headerName: "Pet", field: "pet"},
-            {headerName: "City", field: "city"},
-            {headerName: "Car_make", field: "car_make"},
-            {headerName: "Car_vin", field: "car_vin"},
-            {headerName: "Color", field: "color"},
-            {headerName: "Product", field: "product"},
-            {headerName: "Company", field: "company"},
-            {headerName: "Wealth", field: "wealth"},
-            {headerName: "Race", field: "race"},
-            {headerName: "Plant", field: "plant"},
-            {headerName: "Postcode", field: "postcode"},
-            {headerName: "Phone_number", field: "phone_number"},
-            {headerName: "Address", field: "address"},
-            {headerName: "Iban", field: "iban"}
+            {label: "Id", field: "id"},
+            {label: "First_name", field: "first_name"},
+            {label: "Last_name", field: "last_name"},
+            {label: "Email", field: "email"},
+            {label: "Gender", field: "gender"},
+            {label: "Ip_address", field: "ip_address"},
+            {label: "Buzzword", field: "buzzword"},
+            {label: "Pet", field: "pet"},
+            {label: "City", field: "city"},
+            {label: "Car_make", field: "car_make"},
+            {label: "Car_vin", field: "car_vin"},
+            {label: "Color", field: "color"},
+            {label: "Product", field: "product"},
+            {label: "Company", field: "company"},
+            {label: "Wealth", field: "wealth"},
+            {label: "Race", field: "race"},
+            {label: "Plant", field: "plant"},
+            {label: "Postcode", field: "postcode"},
+            {label: "Phone_number", field: "phone_number"},
+            {label: "Address", field: "address"},
+            {label: "Iban", field: "iban"}
         ];
 
-        let rows = data;
-        for (let i = 0; i < 0; i++) {
-            rows = [...rows.map(r => ({...r})), ...rows.map(r => ({...r}))];
-        }
-
-        const gridDiv = document.querySelector("#ag-grid");
-        let gridOptions = {
-            columnDefs: columns.slice(0, columns.length),
-            rowData: rows,
-            rowHeight: 32
+        grid.renderCell = function (content, column, row) {
+            content.innerText = row[column.field] ?? "-";
         };
 
-        new agGrid.Grid(gridDiv, gridOptions);
+        let rows = data;
+        for (let i = 0; i <0; i++) {
+            rows = [...rows.map(r=>({...r})), ...rows.map(r=>({...r}))]
+        }
 
-        await new Promise(function (resolve) {
-            setTimeout(resolve, 250);
+        rows.forEach((row, index) => {
+            row.label = index;
+            row.height = 32;
         });
 
-        const grid = window.grid = document.querySelector(".ag-center-cols-viewport");
-
-        const api = gridOptions.api;
-
+        Object.assign(grid, {
+            columns: columns.slice(0, columns.length),
+            rows: rows
+        });
 
         let searchParams = new URLSearchParams(window.location.search.slice(1));
         if (searchParams.has("demo")) {
@@ -94,11 +94,26 @@
                     console.time("raf");
                     requestAnimationFrame(function redraw() {
                         ++count;
-                        api.ensureIndexVisible((top += 50) % 1000)
-                        if (top <= 3000) {
+                        grid.scrollTo(0, (top += 500) % 31000);
+                        if (top <= 62000) {
                             requestAnimationFrame(redraw);
                         } else {
                             console.timeEnd("raf");
+                            console.log("count:", count);
+                        }
+                    });
+                    break;
+                }
+                case "rx": {
+                    let left = 0, count = 0;
+                    console.time("raf");
+                    requestAnimationFrame(function redraw() {
+                        ++count;
+                        grid.scrollTo((left += 10) % 3000);
+                        if (left <= 6000) {
+                            requestAnimationFrame(redraw);
+                        } else {
+                            console.timeEnd("rx");
                             console.log("count:", count);
                         }
                     });
